# qlira-web-server

./: Cargo.toml  README.md
.example/config/: server.toml
.example/server/: index.php
src/: lib.rs  main.rs
src/config/: mod.rs  server_config.rs
src/handlers/: config_handler.rs  javascript_handler.rs  mod.rs  php_handler.rs  static_files.rs  websocket_handler.rs
src/middleware/: error_handler.rs  logger.rs  mod.rs
src/server/: http.rs
src/utils/: performance.rs
